@@ -1,6 +1,8 @@
 AUX josm-r1 304 RMD160 a54bbdbbc2cd1b8ca4deeb11604be22df4194444 SHA1 0bd5757ed573a2c274d76c0b4ba4b770134a0734 SHA256 c407df927e62c4e2afbff998e105dfe4084ab07484a4b28a00f196e7dafee3cf
 AUX josm.png 1737 RMD160 81fc37d55d4b6b14f9a35c3ed89da3ecd7d538f2 SHA1 cd51f118224555727279536bb42a634afcef6626 SHA256 fed9c1ef73900e6a3cac162a4006ab8cd972ba29938a857e8af604779109c39f
+DIST josm-1553.tar.bz2 7273117 RMD160 39ee09163ed67532b2e8f8eac1fbb940eb1765f5 SHA1 bf750a08c4937843d042f25604ffb00a385f78d1 SHA256 9d74c165393617edaa37d0b20f7c303e67c1ef98bfac02a26dbd9877f86d5860
 DIST josm-snapshot-1537.jar 4623883 RMD160 29559d9e6146bce7d093e904df0c283a3e3988de SHA1 cc139f96c6bb4609cd690459aa0f71b98fb77a08 SHA256 299c773fb6b083ebb825f359ec98839549ec05656b18cc25308df0cd2edfdf5e
 EBUILD josm-1.537.ebuild 861 RMD160 4ad0b04b2490ac33455cd22caba3550c666da693 SHA1 6915950528ced4437fd5ca1d4ba7889931c4ed14 SHA256 858bf4fb1c0065c8fa22303c41b8046d79fcf8478108aa6fee408aa7614c801c
-MISC ChangeLog 3178 RMD160 960f731e31320b5f7c844956b48fdafd983d2de7 SHA1 04a743738ac9ee840cfc4ae052ee93fa081f113c SHA256 4995e62873d191adfef79272b4cbb6ad8866105b27b24418523f38f94dfc2a59
+EBUILD josm-1.553.ebuild 979 RMD160 6129814758e8141659ecec908f9526f23aeeabe4 SHA1 160c85aca47b1a0c90fcbe065970af521d144d9b SHA256 beb4d1142745a1c587fb9630a18d070f84765a365299b03df6e1873a40e59b65
+MISC ChangeLog 3283 RMD160 b93442a48d4bfc4017b866b961b9fc5f5f56bcae SHA1 10f6e0c02fba11275b24b08551d2990691cdf589 SHA256 0d497df579ca435445eba6bdff239021181e8eda6c6f77f4c4cecb09f7c91cfe
 MISC metadata.xml 155 RMD160 fd746bb2de09e0076727f37ade1fb64f63af8469 SHA1 cf348f100a9c070637df096751aadb213dcfc303 SHA256 470d983a79ec78e77d5413bb72372bc89249a68818d941d3e34ce13dd10c4c36
