@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sci-geosciences/josm/ChangeLog,v 1.17 2008/10/07 23:16:39 hanno Exp $
 
+  24 Apr 2009, Fabian Fingerle <fabian@datensalat.eu>
+  +josm-1.553.ebuild:
+  Bump. Build out of source
+
   20 Apr 2009, Fabian Fingerle <fabian@datensalat.eu>
   -josm-1.527.ebuild, +josm-1.537.ebuild:
   Bump.
